Use `Path.of`